--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:progress="50"
+        app:progress_unreach_color="#eee"
+        android:layout_marginTop="30dp"/>
+
+    <yyl.horizontalprogressbar.RoundProgressBar
+        android:id="@+id/progress_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:radius="60dp"
         app:progress_unreach_color="#eee"
         android:layout_marginTop="30dp"/>
 </LinearLayout>
