--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,7 @@
     <attr name="progress_text_color" format="color"/>
     <attr name="progress_text_size" format="dimension"/>
     <attr name="progress_text_offset" format="dimension"/>
+    <attr name="radius" format="dimension"/>
 
     <declare-styleable name="CustomHorizontalProgressBar">
         <attr name="progress_unreach_color"/>
@@ -24,5 +25,15 @@
         <attr name="progress_unreach_height"/>
         <attr name="progress_reach_color"/>
         <attr name="progress_reach_height"/>
+    </declare-styleable>
+    
+    <declare-styleable name="RoundProgressBar">
+        <attr name="progress_unreach_color"/>
+        <attr name="progress_unreach_height"/>
+        <attr name="progress_reach_color"/>
+        <attr name="progress_reach_height"/>
+        <attr name="progress_text_color"/>
+        <attr name="progress_text_size"/>
+        <attr name="radius"/>
     </declare-styleable>
 </resources>
